--- a/style.css
+++ b/style.css
@@ -8,12 +8,16 @@ body {
 }
 
 #theme {
-  border: none;
+  height: 50px;
+  border: 3px solid white;
+  border-radius: 24px;
   background-color: #ff4655;
   color: white;
-  font-size: 16px;
-  font-weight: bold;
+  cursor: pointer;
+}
 
+#theme:hover {
+  
 }
 
 .dark-mode {
@@ -54,10 +58,15 @@ body {
 
 #home {
     display: flex;
+    flex-direction: column;
+    gap: 20px;
     height: 100vh;
     justify-content: center;
     align-items: center;
   }
+
+  
+
   .card {
     display: flex;
     flex-direction: column;
@@ -97,32 +106,44 @@ body {
 #project {
   height: 100vh;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
   text-align: center;
-  font-size: larger;
+  justify-content: center;
 }
 
-.project-head {
-  padding: 10px;
-  border: 1px white solid;
-  border-radius: 5px;
-  margin: 10px;
+.project {
+  margin-top: 42px;
+  width: 50%;
 }
 
 .project-card {
   display: flex;
+  text-align: left;
   justify-content: space-between;
-  align-items: center;
-  padding: 10px;
-  width: 100vh;
-
 }
 
-.des-project {
+.detail-project {
   display: none;
-  background-color: #313131;
   text-align: left;
+}
+
+.detail-project.active {
+  display: block;
+}
+
+.btn {
+  height: 50px;
+  border: 3px solid black;
+  border-radius: 24px;
+  background-color: #ff4655;
+  color: white;
+}
+
+.btn:hover, .btn.active {
+    border: 3px solid black;
+    background-color: black;
+    color: white;
 }
 
 #contact {
@@ -173,7 +194,7 @@ body {
   }
 
   .project-card {
-    width: 50vh;
+    width: 30vh;
   }
 
   footer {
